--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>ora2pgsql</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <artifactId>bublik</artifactId>
+    <version>1.2</version>
     <packaging>jar</packaging>
 
     <properties>
