--- a/sql/props.yaml
+++ b/sql/props.yaml
@@ -1,4 +1,6 @@
 threadCount: 10
+initPGChunks: true
+copyPGChunks: true
 
 fromProperties:
   url: jdbc:oracle:thin:@(description=(address=(host=localhost)(protocol=tcp)(port=1521))(connect_data=(service_name=xepdb1)))
