--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
             <artifactId>log4j-api</artifactId>
             <version>2.20.0</version>
         </dependency>
+<!--
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.1.0-alpha1</version>
+            <scope>provided</scope>
+        </dependency>
+-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
