--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
             <version>21.3.0.0</version>
         </dependency>
 
+        <!-- apache commons -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+
         <!-- jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
