--- a/sql/ora2pg.yaml
+++ b/sql/ora2pg.yaml
@@ -1,7 +1,7 @@
 threadCount: 10
 
 fromProperties:
-  url: jdbc:oracle:thin:@(description=(address=(host=localhost)(protocol=tcp)(port=1521))(connect_data=(service_name=xepdb1)))
+  url: jdbc:oracle:thin:@(description=(address=(host=localhost)(protocol=tcp)(port=1521))(connect_data=(service_name=ORCLPDB1)))
   user: test
   password: test
 toProperties:
