--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,20 @@
             <artifactId>orai18n</artifactId>
             <version>21.3.0.0</version>
         </dependency>
+<!--
+        <dependency>
+            <groupId>com.datastax.oss</groupId>
+            <artifactId>java-driver-core</artifactId>
+            <version>4.17.0</version>
+        </dependency>
+-->
+        <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>cassandra-driver-mapping</artifactId>
+            <version>3.11.5</version>
+        </dependency>
+
+
 
         <!-- apache commons -->
         <dependency>
