--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -19,21 +19,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>de.bytefish</groupId>
-            <artifactId>pgbulkinsert</artifactId>
-            <version>8.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc11</artifactId>
-            <version>21.3.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.oracle.database.nls</groupId>
-            <artifactId>orai18n</artifactId>
-            <version>21.3.0.0</version>
-        </dependency>
 <!--
         <dependency>
             <groupId>com.datastax.oss</groupId>
@@ -85,9 +70,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>5.1.0</version>
+            <groupId>org.bublik</groupId>
+            <artifactId>bublik</artifactId>
+            <version>1.2</version>
         </dependency>
 
     </dependencies>
