--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>bublik</artifactId>
-    <version>1.2</version>
+    <groupId>org.bublik</groupId>
+    <artifactId>bublikcli</artifactId>
+    <version>1.2.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.bublik</groupId>
             <artifactId>bublik</artifactId>
-            <version>1.2</version>
+            <version>1.2.0</version>
         </dependency>
 
     </dependencies>
