--- a/cli/config/pg2pg.yaml
+++ b/cli/config/pg2pg.yaml
@@ -1,6 +1,6 @@
 threadCount: 1
 initPGChunks: true
-copyPGChunks: true
+copyPGChunks: false
 
 fromProperties:
   url: jdbc:postgresql://localhost:5432/postgres?options=-c%20enable_indexscan=off%20-c%20enable_indexonlyscan=off%20-c%20enable_bitmapscan=off
