--- a/cli/config/pg2cs.yaml
+++ b/cli/config/pg2cs.yaml
@@ -7,6 +7,9 @@ fromProperties:
   user: test
   password: test
 toProperties:
-  url: jdbc:postgresql://localhost:5432/postgres
+  type: cassandra
+  host: localhost
+  port: 9042
+  keyspace: store
   user: test
   password: test
