--- a/cli/config/pg2cs.yaml
+++ b/cli/config/pg2cs.yaml
@@ -3,12 +3,12 @@ initPGChunks: true
 copyPGChunks: true
 
 fromProperties:
-  url: jdbc:postgresql://localhost:5432/postgres?options=-c%20enable_indexscan=off%20-c%20enable_indexonlyscan=off%20-c%20enable_bitmapscan=off
+  url: jdbc:postgresql://172.28.0.4:5432/postgres?options=-c%20enable_indexscan=off%20-c%20enable_indexonlyscan=off%20-c%20enable_bitmapscan=off
   user: test
   password: test
 toProperties:
   type: cassandra
-  host: localhost
+  host: 172.28.0.1
   port: 9042
   keyspace: store
   user: test
