--- a/bublik/pom.xml
+++ b/bublik/pom.xml
@@ -20,6 +20,12 @@
     </properties>
 
     <dependencies>
+<!--        aws sdk-->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apache-client</artifactId>
+            <version>2.26.16</version>
+        </dependency>
 <!--        bytefish-->
         <dependency>
             <groupId>de.bytefish</groupId>
