--- a/cli/config/pg2cs.yaml
+++ b/cli/config/pg2cs.yaml
@@ -8,6 +8,7 @@ fromProperties:
   password: test
 toProperties:
   type: cassandra
+  datacenter: datacenter1
   host: 172.28.0.1
   port: 9042
   keyspace: store
