--- a/cli/config/pg2cs.yaml
+++ b/cli/config/pg2cs.yaml
@@ -9,7 +9,7 @@ fromProperties:
 toProperties:
   type: cassandra
   datacenter: datacenter1
-  host: 172.28.0.1
+  hosts: 172.28.0.1
   port: 9042
   keyspace: store
   user: test
