--- a/cli/config/pg2pg-sec.yaml
+++ b/cli/config/pg2pg-sec.yaml
@@ -1,4 +1,4 @@
-threadCount: 10
+threadCount: 1
 
 fromProperties:
   url: jdbc:postgresql://localhost:5432/postgres?options=-c%20enable_indexscan=off%20-c%20enable_indexonlyscan=off%20-c%20enable_bitmapscan=off
@@ -9,3 +9,6 @@ toProperties:
   user: test
   password: test
 
+crypto:
+  handler: org.chekist.Chekist
+  settings: file.json
